--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "ApplicationDbContext": "Host=localhost;Port=5432;Username=postgres;Password=111;Database=StudyGo"
-  }
+    "ConnectionStrings": {
+        "ApplicationDbContext": "Host=localhost;Port=5432;Username=chima;Password=111;Database=StudyGo"
+    }
 }
