--- a/Develop/backend/StudyGO.API/StudyGO.Core/StudyGO.Core.csproj
+++ b/Develop/backend/StudyGO.API/StudyGO.Core/StudyGO.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StudyGO.Contracts\StudyGO.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
