--- a/Develop/backend/StudyGO.API/StudyGO.Application/StudyGO.Application.csproj
+++ b/Develop/backend/StudyGO.API/StudyGO.Application/StudyGO.Application.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StudyGO.Core\StudyGO.Core.csproj" />
