--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -6,11 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDbContext": "Host=localhost;Port=5432;Username=chima;Password=111;Database=StudyGo"
+    "ApplicationDbContext": ""
   },
 
   "Jwt": {
-    "Key": "T9pV2xZ!qLr@M8nC7sDf#1HgBvEwKjU0",
-    "Issuer": "StudyGO.API"
+    "Key": "",
+    "Issuer": ""
   }
 }
