logging extensions and corrects

--- a/Develop/backend/StudyGO.API/StudyGO.Core/StudyGO.Core.csproj
+++ b/Develop/backend/StudyGO.API/StudyGO.Core/StudyGO.Core.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\StudyGO.Contracts\StudyGO.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Logging.Abstractions">
+      <HintPath>..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.8\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
