Email service done and registry in DI

--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -13,5 +13,13 @@
     "Key": "",
     "Issuer": "",
     "Expires": ""
+  },
+
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "Fromname": "My App",
+    "Username": "your-email@gmail.com",
+    "Password": "your-password"
   }
 }
