corrects and errors handle

--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -16,10 +16,10 @@
   },
 
   "EmailSettings": {
-    "SmtpServer": "smtp.gmail.com",
-    "Port": 587,
+    "SmtpServer": "smtp.mail.ru",
+    "Port": 465,
     "Fromname": "My App",
-    "Username": "your-email@gmail.com",
-    "Password": "your-password"
+    "Username": "alefa2000@mail.ru",
+    "Password": "hcKrjfUaphbU6K9YwMZk"
   }
 }
