--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -20,6 +20,6 @@
     "Port": 465,
     "Fromname": "My App",
     "Username": "alefa2000@mail.ru",
-    "Password": "hcKrjfUaphbU6K9YwMZk"
+    "Password": ""
   }
 }
