--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -20,7 +20,7 @@
     "Port": 465,
     "Fromname": "My App",
     "Username": "alefa2000@mail.ru",
-    "Password": "ME9JoSGA4VexfKoDzOT9",
+    "Password": "SsHeqafYULQaTkonb40S",
     "BaseUrl" : "https://localhost:7296"
   }
 }
