added the ability to disable verification

--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -22,5 +22,9 @@
     "Username": "alefa2000@mail.ru",
     "Password": "",
     "BaseUrl" : "https://localhost:7296"
+  },
+
+  "UserAccount": {
+    "RequireEmailVerification": true
   }
 }
