logic verification in tutor profile registry

--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -26,5 +26,8 @@
 
   "UserAccount": {
     "RequireEmailVerification": true
+  },
+  "TutorAccount": {
+    "RequireEmailVerification": true
   }
 }
