email service options

--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -27,7 +27,13 @@
   "UserAccount": {
     "RequireEmailVerification": true
   },
+  
   "TutorAccount": {
     "RequireEmailVerification": true
+  },
+
+  "EmailConfirmation": {
+    "Action": "ConfirmEmailPage",
+    "Controller": "Account"
   }
 }
