extract endpoint from html in config

--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -34,6 +34,7 @@
 
   "EmailConfirmation": {
     "Action": "ConfirmEmailPage",
+    "ConfirmAction": "ConfirmEmail",
     "Controller": "Account"
   }
 }
