add UserRegistryResponse contract

--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -29,7 +29,7 @@
   },
   
   "TutorAccount": {
-    "RequireEmailVerification": true
+    "RequireEmailVerification": false
   },
 
   "EmailConfirmation": {
