--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -11,8 +11,8 @@
 
   "Jwt": {
     "Key": "",
-    "Issuer": "",
-    "Expires": ""
+    "Issuer": "StudyGO",
+    "Expires": "120"
   },
 
   "EmailSettings": {
