--- a/Develop/backend/StudyGO.API/StudyGO.API/StudyGO.API.csproj
+++ b/Develop/backend/StudyGO.API/StudyGO.API/StudyGO.API.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\StudyGO.Core\StudyGO.Core.csproj" />
     <ProjectReference Include="..\StudyGO.infrastructure\StudyGO.infrastructure.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="seedData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
