life cycle smtp client

--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -16,7 +16,7 @@
   },
 
   "EmailSettings": {
-    "SmtpServer": "smtp.mail.ru",
+    "SmtpServer": "smtpff.mail.ru",
     "Port": 465,
     "Fromname": "My App",
     "Username": "alefa2000@mail.ru",
