--- a/Develop/backend/StudyGO.API/StudyGO.Application/StudyGO.Application.csproj
+++ b/Develop/backend/StudyGO.API/StudyGO.Application/StudyGO.Application.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\StudyGO.Core\StudyGO.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UseCases\" />
+  </ItemGroup>
 </Project>
