--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -29,7 +29,8 @@
   },
   
   "TutorAccount": {
-    "RequireEmailVerification": false
+    "RequireEmailVerification": true,
+    "SchemeReqistry" : 0
   },
 
   "EmailConfirmation": {
