--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -29,8 +29,8 @@
   },
   
   "TutorAccount": {
-    "RequireEmailVerification": true,
-    "SchemeReqistry" : 0
+    "RequireEmailVerification": false,
+    "SchemeReqistry" : 1
   },
 
   "EmailConfirmation": {
