--- a/Develop/backend/StudyGO.API/StudyGO.API/Properties/launchSettings.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7296;http://localhost:5005",
+      "applicationUrl": "https://localhost:7296;https://0.0.0.0:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
