--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -25,12 +25,13 @@
   },
 
   "UserAccount": {
-    "RequireEmailVerification": true
+    "RequireEmailVerification": false,
+    "SchemeRegistry" : 0
   },
   
   "TutorAccount": {
     "RequireEmailVerification": true,
-    "SchemeReqistry" : 0
+    "SchemeRegistry" : 0
   },
 
   "EmailConfirmation": {
