--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -25,7 +25,7 @@
   },
 
   "UserAccount": {
-    "RequireEmailVerification": false,
+    "RequireEmailVerification": true,
     "SchemeRegistry" : 0
   },
   
