--- a/Develop/backend/StudyGO.API/StudyGO.Application/StudyGO.Application.csproj
+++ b/Develop/backend/StudyGO.API/StudyGO.Application/StudyGO.Application.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\StudyGO.Core\StudyGO.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Services\Account\" />
     <Folder Include="UseCases\UserUseCases\" />
   </ItemGroup>
 </Project>
