--- a/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
+++ b/Develop/backend/StudyGO.API/StudyGO.API/appsettings.Development.json
@@ -33,7 +33,17 @@
     "RequireEmailVerification": true,
     "SchemeRegistry" : 0
   },
-
+  
+  "UserVerificationCleanUpOptions": 
+  {
+    "TimeForVerification" : 30
+  },
+  
+  "DatabaseCleanerOptions" : 
+  {
+    "DelayCleanUp" : 5
+  }, 
+  
   "EmailConfirmation": {
     "Action": "ConfirmEmailPage",
     "ConfirmAction": "ConfirmEmail",
