--- a/.github/workflows/Net_Build_and_Test.yml
+++ b/.github/workflows/Net_Build_and_Test.yml
@@ -20,10 +20,10 @@ jobs:
           dotnet-version: '9.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore Develop/backend/StudyGO.API/StudyGO.API.sln
 
       - name: Build
-        run: dotnet build --no-restore --configuration Release
+        run: dotnet build Develop/backend/StudyGO.API/StudyGO.API.sln --no-restore --configuration Release
 
       - name: Run tests
-        run: dotnet test --no-build --configuration Release --logger "trx;LogFileName=test_results.trx" --results-directory TestResults
+        run: dotnet test Develop/backend/StudyGO.API/StudyGO.API.sln --no-build --configuration Release --logger "trx;LogFileName=test_results.trx" --results-directory TestResults
